Bug 1858421 - Don't attempt text-wrap:balance if there are block line-boxes. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D190778